--- a/src/Components/CreditScoreSection.css
+++ b/src/Components/CreditScoreSection.css
@@ -40,12 +40,14 @@
 .stat strong {
   font-size: 24px;
   color: black;
+  margin-left: 10px;
 }
 
 .stat p {
   color: #666;
   font-size: 14px;
   margin-right: 1px;
+  margin-left: 10px;
 
 }
 
